# ALICE-Registry

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
database/migrations/: 006_domain.sql
docker/: Dockerfile.core-engine
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx
frontend/app/dashboard/billing/: page.tsx
frontend/app/dashboard/console/: page.tsx
k8s/: Chart.yaml
k8s/values/: values.yaml
scripts/: smoke-test.sh
services/api-gateway/: Cargo.toml
services/api-gateway/src/: lib.rs  main.rs
services/api-gateway/tests/: integration_test.rs
services/core-engine/: Cargo.toml
services/core-engine/src/: lib.rs  main.rs
services/core-engine/tests/: integration_test.rs
