[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Moroya Sakamoto"]
description = "JWT/API-Key auth gateway with rate limiting and reverse proxy for ALICE Registry"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ext-sakamoro/ALICE-Registry"
keywords = ["gateway", "auth", "rate-limit", "proxy", "registry"]
publish = false

[lib]
name = "api_gateway"
path = "src/lib.rs"

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
dashmap = "6"

[dev-dependencies]
proptest = "1.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
